tester/testsuite/extensions/arrays2/bad/bad003.jl
int main() {
    int[][] xs = new int[2][3];

    xs[1]++;

    return 0;
}
